--- a/.gitignore
+++ b/.gitignore
@@ -3,26 +3,6 @@ __pycache__/
 *.py[codz]
 *$py.class
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
 # Unit test / coverage reports
 .pytest_cache/
 
@@ -39,6 +19,6 @@ __pypackages__/
 env/
 venv/
 ENV/
-env.bak/
-venv.bak/
 
+# Linting
+.ruff_cache/
